--- a/portaljcr/WebContent/pages/login/welcome.xhtml
+++ b/portaljcr/WebContent/pages/login/welcome.xhtml
@@ -23,7 +23,7 @@
 			            </div>
 						<div class="box-body">
 							<div class="col-md-4 col-sm-6 col-xs-12" jsf:rendered="true">
-								<p:link href="/pages/login/welcome.xhtml">
+								<p:link href="/pages/solicitacaoCompra/solicitacao/nova_solicitacao_pre.xhtml">
 									<div class="info-box" style="background-color: #f8f8f8;">
 										<span class="info-box-icon bg-red"><i
 											class="fa fa-shopping-cart"></i></span>
@@ -37,7 +37,63 @@
 								</p:link>
 							</div>
 							<div class="col-md-4 col-sm-6 col-xs-12">
-								<p:link href="/pages/login/welcome.xhtml">
+								<p:link href="#">
+									<div class="info-box" style="background-color: #f8f8f8;">
+										<span class="info-box-icon bg-light-blue"><i
+											class="fa fa-dollar"></i></span>
+	
+										<div class="info-box-content">
+											<p:link href="#" ajax="false">
+												<span class="info-box-text acessoRapidoBox">Solicitar Reembolso</span> 
+											</p:link>
+										</div>
+									</div>
+								</p:link>
+							</div>
+							<div class="col-md-4 col-sm-6 col-xs-12">
+								<p:link href="#">
+									<div class="info-box" style="background-color: #f8f8f8;">
+										<span class="info-box-icon bg-yellow"><i
+											class="fa fa-pencil-square-o"></i></span>
+	
+										<div class="info-box-content">
+											<p:link href="#" ajax="false">
+												<span class="info-box-text acessoRapidoBox">Cotações</span> 
+											</p:link>
+										</div>
+									</div>
+								</p:link>
+							</div>
+							<div class="col-md-4 col-sm-6 col-xs-12">
+								<p:link href="#">
+									<div class="info-box" style="background-color: #f8f8f8;">
+										<span class="info-box-icon bg-purple"><i
+											class="fa fa-sliders"></i></span>
+	
+										<div class="info-box-content">
+											<p:link href="#">
+												<span class="info-box-text acessoRapidoBox">Ajuste Orçamentário</span> 
+											</p:link>
+										</div>
+									</div>
+								</p:link>
+							</div>
+							<div class="col-md-4 col-sm-6 col-xs-12">
+								<p:link href="#">
+									<div class="info-box" style="background-color: #f8f8f8;">
+										<span class="info-box-icon bg-purple" style="background-color: #00acdf !important"><i
+											class="fa fa-file-text-o"></i></span>
+	
+										<div class="info-box-content">
+											<p:link href="#" ajax="false">
+												<span class="info-box-text acessoRapidoBox">NFS-e</span> 
+											</p:link>
+										</div>
+									</div>
+								</p:link>
+							</div>
+							<div class="col-md-4 col-sm-6 col-xs-12">
+								<p:link href="/pages/suporte/novo_chamado.xhtml">
 									<div class="info-box" style="background-color: #f8f8f8;">
 										<span class="info-box-icon bg-green"><i
 											class="fa fa-wrench"></i></span>
