--- a/portaljcr/WebContent/pages/suporte/editar_chamado.xhtml
+++ b/portaljcr/WebContent/pages/suporte/editar_chamado.xhtml
@@ -89,8 +89,15 @@
 														<label for="categoria">Categoria:</label>
 													</div>
 				
-													<div class="col-sm-10 col-md-10">
+													<div class="col-sm-10 col-md-4">
 														<p:outputLabel id="categoria" value="#{chamadoController.chamado.categoria} / #{chamadoController.chamado.subcategoria}" styleClass="control-label font-normal" />
+													</div>
+													<div class="col-sm-2 col-md-2 control-label">
+														<label for="localizacao">Localização:</label>
+													</div>
+				
+													<div class="col-sm-10 col-md-4">
+														<p:outputLabel id="localizacao" value="#{chamadoController.chamado.localizacao}" styleClass="control-label font-normal" />
 													</div>
 												</div>
 												<div class="form-group">
