modelos de email

--- a/portaljcr/resources/email.chamadoAtribuido.html
+++ b/portaljcr/resources/email.chamadoAtribuido.html
@@ -47,12 +47,12 @@
 							<tbody style="border: 1px solid; border-color: #cdcdcd;">
 								<tr>
 									<td
-										style="padding: 15px 20px 15px 20px; font-size: 12px; background-color: #00a65a">
+										style="padding: 15px 20px 15px 20px; font-size: 12px; background-color: #f39c12">
 										<table>
 											<tbody>
 												<tr>
-													<td style="padding: 0 20px 0 0; color:#FFF; font-size:30px;">&#10010;</td>
-													<td><label style="color: #ffffff !important;"><font color="#FFFFFF" size="4">Novo Chamado N&#186; ${numeroChamado}</font></label></td>
+													<td style="padding: 0 20px 0 0; color:#FFF; font-size:30px;">&#9998;</td>
+													<td><label style="color: #ffffff !important;"><font color="#FFFFFF" size="4">Chamado N&#186; ${numeroChamado} em andamento</font></label></td>
 												</tr>
 											</tbody>
 										</table>
@@ -61,7 +61,7 @@
 								<tr>
 									<td>
 										<h2 style="color: #39434d; font-size: 12px; padding-left: 10px;">
-											<span><strong>${nomeUsuario}</strong></span> abriu um novo chamado para a TI.</span><br>
+											<span><strong>${nomeResponsavel}</strong></span> est&aacute; atendendo o seu chamado.</span><br>
 										</h2>
 										<h3
 											style="color: #39434d; font-size: 12px; padding-left: 10px; border-bottom: 1px solid #CCCCCC">INFORMA&Ccedil;&Otilde;ES</h3>
