--- a/portaljcr/resources/email.chamadoResolvido.html
+++ b/portaljcr/resources/email.chamadoResolvido.html
@@ -47,12 +47,12 @@
 							<tbody style="border: 1px solid; border-color: #cdcdcd;">
 								<tr>
 									<td
-										style="padding: 15px 20px 15px 20px; font-size: 12px; background-color: #00a65a">
+										style="padding: 15px 20px 15px 20px; font-size: 12px; background-color: #00c0ef">
 										<table>
 											<tbody>
 												<tr>
-													<td style="padding: 0 20px 0 0; color:#FFF; font-size:30px;">&#10010;</td>
-													<td><label style="color: #ffffff !important;"><font color="#FFFFFF" size="4">Novo Chamado N&#186; ${numeroChamado}</font></label></td>
+													<td style="padding: 0 20px 0 0; color:#FFF; font-size:30px;">&#10003;</td>
+													<td><label style="color: #ffffff !important;"><font color="#FFFFFF" size="4">Chamado N&#186; ${numeroChamado} resolvido</font></label></td>
 												</tr>
 											</tbody>
 										</table>
@@ -61,8 +61,13 @@
 								<tr>
 									<td>
 										<h2 style="color: #39434d; font-size: 12px; padding-left: 10px;">
-											<span><strong>${nomeUsuario}</strong></span> abriu um novo chamado para a TI.</span><br>
+											<span><strong>${nomeResponsavel}</strong></span> adicionou uma solu&ccedil;&atilde;o para o seu chamado.</span><br>
 										</h2>
+										<div>
+											<h3
+											style="color: #39434d; font-size: 12px; padding-left: 10px; border-bottom: 1px solid #CCCCCC">SOLU&Ccedil;&Atilde;O</h3>
+											<p style="padding: 10px; font-size: 12px;">${solucao}</p>
+										</div>
 										<h3
 											style="color: #39434d; font-size: 12px; padding-left: 10px; border-bottom: 1px solid #CCCCCC">INFORMA&Ccedil;&Otilde;ES</h3>
 										<table>
