--- a/portaljcr/WebContent/pages/suporte/novo_chamado.xhtml
+++ b/portaljcr/WebContent/pages/suporte/novo_chamado.xhtml
@@ -91,7 +91,7 @@
 										</div>
 									</div>
 								</div>
-								<p:panel toggleable="false" id="painelAnexos" styleClass="box box-danger">
+								<p:panel toggleable="false" id="painelAnexos" style="border: 0px;">
 									<div class="box-header with-border">
 				             			<h3 class="box-title">Anexos</h3>
 				            		</div>
