--- a/portaljcr/WebContent/pages/login/welcome.xhtml
+++ b/portaljcr/WebContent/pages/login/welcome.xhtml
@@ -37,8 +37,22 @@
 								</p:link>
 							</div>
 							<div class="col-md-4 col-sm-6 col-xs-12">
-								<p:link href="#">
+								<p:link href="/pages/suporte/novo_chamado.xhtml">
 									<div class="info-box" style="background-color: #f8f8f8;">
+										<span class="info-box-icon bg-green"><i
+											class="fa fa-wrench"></i></span>
+	
+										<div class="info-box-content">
+											<p:link href="/pages/suporte/novo_chamado.xhtml" ajax="false">
+												<span class="info-box-text acessoRapidoBox">Abrir Chamado</span> 
+											</p:link>
+										</div>
+									</div>
+								</p:link>
+							</div>
+							<div class="col-md-4 col-sm-6 col-xs-12">
+								<p:link href="#" disabled="true">
+									<div class="info-box" style="background-color: #f8f8f8; opacity: 0.5">
 										<span class="info-box-icon bg-light-blue"><i
 											class="fa fa-dollar"></i></span>
 	
@@ -51,8 +65,8 @@
 								</p:link>
 							</div>
 							<div class="col-md-4 col-sm-6 col-xs-12">
-								<p:link href="#">
-									<div class="info-box" style="background-color: #f8f8f8;">
+								<p:link href="#" disabled="true">
+									<div class="info-box" style="background-color: #f8f8f8; opacity: 0.5">
 										<span class="info-box-icon bg-yellow"><i
 											class="fa fa-pencil-square-o"></i></span>
 	
@@ -65,8 +79,8 @@
 								</p:link>
 							</div>
 							<div class="col-md-4 col-sm-6 col-xs-12">
-								<p:link href="#">
-									<div class="info-box" style="background-color: #f8f8f8;">
+								<p:link href="#" disabled="true">
+									<div class="info-box" style="background-color: #f8f8f8; opacity: 0.5">
 										<span class="info-box-icon bg-purple"><i
 											class="fa fa-sliders"></i></span>
 	
@@ -79,28 +93,14 @@
 								</p:link>
 							</div>
 							<div class="col-md-4 col-sm-6 col-xs-12">
-								<p:link href="#">
-									<div class="info-box" style="background-color: #f8f8f8;">
+								<p:link href="#" disabled="true">
+									<div class="info-box" style="background-color: #f8f8f8; opacity: 0.5">
 										<span class="info-box-icon bg-purple" style="background-color: #00acdf !important"><i
 											class="fa fa-file-text-o"></i></span>
 	
 										<div class="info-box-content">
 											<p:link href="#" ajax="false">
 												<span class="info-box-text acessoRapidoBox">NFS-e</span> 
-											</p:link>
-										</div>
-									</div>
-								</p:link>
-							</div>
-							<div class="col-md-4 col-sm-6 col-xs-12">
-								<p:link href="/pages/suporte/novo_chamado.xhtml">
-									<div class="info-box" style="background-color: #f8f8f8;">
-										<span class="info-box-icon bg-green"><i
-											class="fa fa-wrench"></i></span>
-	
-										<div class="info-box-content">
-											<p:link href="/pages/suporte/novo_chamado.xhtml" ajax="false">
-												<span class="info-box-text acessoRapidoBox">Abrir Chamado</span> 
 											</p:link>
 										</div>
 									</div>
