--- a/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/exibir_solicitacao.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/exibir_solicitacao.xhtml
@@ -12,10 +12,10 @@
 		<ui:param name="activeSubmenu" value="novaSolicitacao"/>
     	<ui:param name="activeMenu" value="solicitacaoCompra"/>
     	
-    	<ui:define name="pageTitle"><i class="fa fa-cart-plus fa-1x cor-padrao"></i> Nova Solicitação</ui:define>
+    	<ui:define name="pageTitle"><i class="fa fa-cart-plus fa-1x cor-padrao"></i> Solicitação</ui:define>
 		<ui:define name="breadcrumb">
 			<li><i class="fa fa-shopping-cart"></i> Solicitação de Compra</li>
-	    	<li class="active"><i class="fa fa-cart-plus"></i> Nova Solicitação</li>
+	    	<li class="active"><i class="fa fa-cart-plus"></i> Exibir Solicitação</li>
 		</ui:define>
 		<ui:define name="body">
 			<div class="page-content-central ui-fluid">
@@ -24,7 +24,6 @@
 						<p:panel toggleable="false" id="painelCadastro" styleClass="box box-danger">
 							<div class="box-header with-border">
 		             			<h3 class="box-title">Solicitação de Compra</h3>
-		             			<span class="users-list-date pull-right">(*) Campos Obrigatórios.</span>
 		            		</div>
 							<div class="form-horizontal">
 								<div class="box-body">
@@ -35,10 +34,7 @@
 										</div>
 										
 										<div class="col-sm-3 col-md-3">
-											<p:selectOneMenu id="prioridade" value="#{solicitacaoCompraController.solicitacaoCompraDTO.prioridade}">
-									        	<f:selectItem itemLabel="Selecione" itemValue="" noSelectionOption="false" />
-									        	<f:selectItems value="#{solicitacaoCompraController.listaPrioridade}" var="prioridade" itemLabel="#{prioridade.descricao}" itemValue="#{prioridade}" />
-									        </p:selectOneMenu>
+											<p:out
 										</div>
 									</div>
 									<div class="form-group">
