--- a/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/exibir_cancelarSolicitacao.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/exibir_cancelarSolicitacao.xhtml
@@ -15,7 +15,7 @@
     	<ui:define name="pageTitle"><i class="fa fa-cart-plus fa-1x cor-padrao"></i> Solicitação</ui:define>
 		<ui:define name="breadcrumb">
 			<li><i class="fa fa-shopping-cart"></i> Solicitação de Compra</li>
-	    	<li class="active"><i class="fa fa-cart-plus"></i> Exibir Solicitação</li>
+	    	<li class="active"><i class="fa fa-cart-plus"></i> Cancelar Solicitação</li>
 		</ui:define>
 		<ui:define name="body">
 			<div class="page-content-central ui-fluid">
@@ -23,7 +23,7 @@
 					<f:validateBean disabled="true" for="@form">
 						<p:panel toggleable="false" id="painelCadastro" styleClass="box box-danger">
 							<div class="box-header with-border">
-		             			<h3 class="box-title">Solicitação de Compra</h3>
+		             			<h3 class="box-title">Cancelar Solicitação de Compra</h3>
 		            		</div>
 							<div class="form-horizontal">
 								<div class="box-body">
@@ -145,6 +145,20 @@
 										</div>
 									</div>
 								</p:panel>
+								<p:panel toggleable="false" id="painelMotivoCancelamento" style="border: 0px !important">
+									<div class="box-header with-border">
+				             			<h3 class="box-title">Motivo do Cancelamento</h3>
+				            		</div>
+				            		<div class="form-horizontal">
+										<div class="box-body">
+											<div class="form-group">
+												<div class="col-sm-12 col-md-12">
+													<h:inputTextarea id="motivoCancelamento" value="#{minhaSolicitacaoCompraController.solicitacaoCompra.motivoCancelamento}" styleClass="form-control" rows="5" />
+												</div>
+											</div>
+										</div>
+									</div>
+								</p:panel>
 								<div class="box-footer">
 									<div class="col-sm-3 col-md-3 pull-left">
 										<p:commandButton
@@ -156,6 +170,16 @@
 											immediate="true"
 											action="#{minhaSolicitacaoCompraController.voltar()}"
 											ajax="false" />
+									</div>
+									<div class="col-sm-3 col-md-3 pull-right" >
+										<p:commandButton
+											styleClass="btn btn-default"
+											icon="fa fa-trash"
+											value="Cancelar Solicitação"
+											id="btn_cancelar"
+											process="@this, @form:painelMotivoCancelamento"
+											action="#{minhaSolicitacaoCompraController.cancelar()}"
+											ajax="true" />
 									</div>
 								</div>
 							</div>
