--- a/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/nova_solicitacao_pre.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/nova_solicitacao_pre.xhtml
@@ -43,19 +43,21 @@
 									        </p:selectOneMenu>
 										</div>
 									</div>
-									<div class="form-group">
-										<div class="col-sm-12 col-md-12">
-											<label for="quemIraCotar">Quem irá realizar a cotação?</label>
+									<p:outputPanel id="painelComboQuemIraCotar" rendered="#{loginController.hasGroup(['ADMINISTRADOR', 'COTACAO'])}">
+										<div class="form-group">
+											<div class="col-sm-12 col-md-12">
+												<label for="quemIraCotar">Quem irá realizar a cotação?</label>
+											</div>
+		
+											<div class="col-sm-12 col-md-10">
+												<p:selectOneRadio id="quemIraCotar" value="#{solicitacaoCompraController.solicitacaoCompraDTO.possuiGrupoCotacao}" styleClass="radio" layout="responsive" columns="2">
+												    <f:selectItem itemLabel="Grupo de Cotação" itemValue="true" />
+												    <f:selectItem itemLabel="Próprio Solicitante" itemValue="false" />
+												    <p:ajax event="change" update="@form:painelComboGrupoCotacao" global="false" />
+												</p:selectOneRadio>
+											</div>
 										</div>
-	
-										<div class="col-sm-12 col-md-10">
-											<p:selectOneRadio id="quemIraCotar" value="#{solicitacaoCompraController.solicitacaoCompraDTO.possuiGrupoCotacao}" styleClass="radio" layout="responsive" columns="2">
-											    <f:selectItem itemLabel="Grupo de Cotação" itemValue="true" />
-											    <f:selectItem itemLabel="Próprio Solicitante" itemValue="false" />
-											    <p:ajax event="change" update="@form:painelComboGrupoCotacao" global="false" />
-											</p:selectOneRadio>
-										</div>
-									</div>
+									</p:outputPanel>
 									<p:outputPanel id="painelComboGrupoCotacao">
 										<div class="form-group">
 											<div class="col-sm-12 col-md-12">
