--- a/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/listar_minhasSolicitacoes.xhtml
+++ b/portaljcr/WebContent/pages/solicitacaoCompra/solicitacao/listar_minhasSolicitacoes.xhtml
@@ -16,7 +16,7 @@
 			<f:viewAction action="#{minhaSolicitacaoCompraController.iniciarProcesso()}" />
 		</f:metadata>
     	
-    	<ui:define name="pageTitle"><i class="fa fa-newspaper-o fa-1x cor-padrao"></i> Minhas Solicitações</ui:define>
+    	<ui:define name="pageTitle"><i class="fa fa-list-alt fa-1x cor-padrao"></i> Minhas Solicitações</ui:define>
     	<ui:define name="breadcrumb">
 			<li><i class="fa fa-shopping-cart"></i> Solicitação de Compra</li>
 	    	<li class="active"><i class="fa fa-list-alt"></i> Minhas Solicitações</li>
