--- a/portaljcr/WebContent/pages/administrador/usuario/editar_usuario.xhtml
+++ b/portaljcr/WebContent/pages/administrador/usuario/editar_usuario.xhtml
@@ -34,7 +34,7 @@
 										</div>
 	
 										<div class="col-sm-10 col-md-10">
-											<p:outputLabel id="nome" value="#{usuarioController.usuario.nome}" styleClass="font-normal" />
+											<p:outputLabel id="nome" value="#{usuarioController.usuario.nome}" styleClass="font-normal control-label" />
 										</div>
 									</div>
 									<div class="form-group">
@@ -43,7 +43,7 @@
 										</div>
 	
 										<div class="col-sm-10 col-md-10">
-											<p:outputLabel id="usuario" value="#{usuarioController.usuario.usuario}" styleClass="font-normal" />
+											<p:outputLabel id="usuario" value="#{usuarioController.usuario.usuario}" styleClass="font-normal control-label" />
 										</div>
 									</div>
 									<div class="form-group">
@@ -52,7 +52,7 @@
 										</div>
 	
 										<div class="col-sm-10 col-md-10">
-											<p:outputLabel id="email" value="#{usuarioController.usuario.email}" styleClass="font-normal" />
+											<p:outputLabel id="email" value="#{usuarioController.usuario.email}" styleClass="font-normal control-label" />
 										</div>
 									</div>
 									<div class="form-group">
@@ -61,7 +61,7 @@
 										</div>
 	
 										<div class="col-sm-10 col-md-10">
-											<p:outputLabel id="situacao" value="#{usuarioController.usuario.situacao ? 'ATIVO' : 'INATIVO'}" styleClass="font-normal" />
+											<p:outputLabel id="situacao" value="#{usuarioController.usuario.situacao ? 'ATIVO' : 'INATIVO'}" styleClass="font-normal control-label" />
 										</div>
 									</div>
 									<div class="form-group">
