--- a/portaljcr/WebContent/pages/login/welcome.xhtml
+++ b/portaljcr/WebContent/pages/login/welcome.xhtml
@@ -51,14 +51,14 @@
 								</p:link>
 							</div>
 							<div class="col-md-4 col-sm-6 col-xs-12">
-								<p:link href="#" disabled="true">
-									<div class="info-box" style="background-color: #f8f8f8; opacity: 0.5">
-										<span class="info-box-icon bg-light-blue"><i
-											class="fa fa-dollar"></i></span>
+								<p:link href="/pages/solicitacaoCompra/cotacao/listar_minhasCotacoes.xhtml">
+									<div class="info-box" style="background-color: #f8f8f8;">
+										<span class="info-box-icon bg-yellow"><i
+											class="fa fa-pencil-square-o"></i></span>
 	
 										<div class="info-box-content">
-											<p:link href="#" ajax="false">
-												<span class="info-box-text acessoRapidoBox">Solicitar Reembolso</span> 
+											<p:link href="/pages/solicitacaoCompra/cotacao/listar_minhasCotacoes.xhtml" ajax="false">
+												<span class="info-box-text acessoRapidoBox">Cotações</span> 
 											</p:link>
 										</div>
 									</div>
@@ -67,12 +67,12 @@
 							<div class="col-md-4 col-sm-6 col-xs-12">
 								<p:link href="#" disabled="true">
 									<div class="info-box" style="background-color: #f8f8f8; opacity: 0.5">
-										<span class="info-box-icon bg-yellow"><i
-											class="fa fa-pencil-square-o"></i></span>
+										<span class="info-box-icon bg-light-blue"><i
+											class="fa fa-dollar"></i></span>
 	
 										<div class="info-box-content">
 											<p:link href="#" ajax="false">
-												<span class="info-box-text acessoRapidoBox">Cotações</span> 
+												<span class="info-box-text acessoRapidoBox">Solicitar Reembolso</span> 
 											</p:link>
 										</div>
 									</div>
